k8s/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fortaleza
  labels:
    app.kubernetes.io/name: fortaleza-digital
    app.kubernetes.io/component: namespace
    app.kubernetes.io/part-of: fortaleza
